Images distortion fix.

--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,7 @@ Tiles:
 	}
 	.tiles img {
 		height: 100%;
+		object-fit: cover;
 	}
 	.tile-1 {
 		grid-area: a;
